[gd_scene load_steps=19 format=3 uid="uid://na5bookfxxgf"]

[ext_resource type="Script" path="res://scripts/cosmic_chimera.gd" id="1_den40"]
[ext_resource type="Texture2D" uid="uid://bbbhf2b4cl0ky" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_001.png" id="2_r31fs"]
[ext_resource type="Texture2D" uid="uid://cm8nfaj63c51c" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_003.png" id="3_cv2ey"]
[ext_resource type="Texture2D" uid="uid://c1hydway20c6r" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_008.png" id="4_2jrvx"]
[ext_resource type="Texture2D" uid="uid://dwsclltssax1j" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_009.png" id="5_wl22b"]
[ext_resource type="Texture2D" uid="uid://cvnmjqakya12l" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_012.png" id="6_yfoj6"]
[ext_resource type="Texture2D" uid="uid://c7yld2kc55ukr" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_013.png" id="7_otxjo"]
[ext_resource type="Texture2D" uid="uid://cl7lq467jjlbq" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_014.png" id="8_6afhp"]
[ext_resource type="Texture2D" uid="uid://dj1fokw3wjwd5" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_017.png" id="9_0nixy"]
[ext_resource type="Texture2D" uid="uid://b3awlv3pdnqh" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_019.png" id="10_4l5by"]
[ext_resource type="Texture2D" uid="uid://b15rajblp5ibm" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Animations/Explosions/Ship1_Explosion/Ship1_Explosion_020.png" id="11_uf51f"]
[ext_resource type="Texture2D" uid="uid://ddrfm3qb4mtfn" path="res://craftpix-991101-free-pixel-art-enemy-spaceship-2d-sprites/PNG_Parts&Spriter_Animation/Ship1/Ship1.png" id="12_5gd43"]
[ext_resource type="AudioStream" uid="uid://dfpe12dset4bq" path="res://kenney_space-shooter-redux/Bonus/explosion-6055.mp3" id="13_ng044"]
[ext_resource type="Script" path="res://scripts/progress_bar.gd" id="14_sic72"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6h512"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": ExtResource("2_r31fs")
}, {
"duration": 0.1,
"texture": ExtResource("3_cv2ey")
}, {
"duration": 0.1,
"texture": ExtResource("4_2jrvx")
}, {
"duration": 0.1,
"texture": ExtResource("5_wl22b")
}, {
"duration": 0.1,
"texture": ExtResource("6_yfoj6")
}, {
"duration": 0.1,
"texture": ExtResource("7_otxjo")
}, {
"duration": 0.1,
"texture": ExtResource("8_6afhp")
}, {
"duration": 0.1,
"texture": ExtResource("9_0nixy")
}, {
"duration": 0.1,
"texture": ExtResource("10_4l5by")
}, {
"duration": 0.1,
"texture": ExtResource("11_uf51f")
}],
"loop": true,
"name": &"crashed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_5gd43")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_daro4"]
bg_color = Color(0.6, 0.6, 0.6, 0.117647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nltpt"]
bg_color = Color(0.780392, 0.478431, 0.0745098, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6hsi"]
size = Vector2(87, 66)

[node name="CosmicChimera" type="Area2D" groups=["Enemy"]]
script = ExtResource("1_den40")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6h512")
animation = &"crashed"

[node name="DestroyedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ng044")
volume_db = -20.0

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Shoot" type="Node2D" parent="."]

[node name="Direction" type="Node2D" parent="Shoot"]
position = Vector2(90, 0)

[node name="LifePointsBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = 30.0
offset_right = 25.0
offset_bottom = 35.0
theme_override_styles/background = SubResource("StyleBoxFlat_daro4")
theme_override_styles/fill = SubResource("StyleBoxFlat_nltpt")
value = 50.0
show_percentage = false
script = ExtResource("14_sic72")

[node name="SetDirectionTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ActionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_a6hsi")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="SetDirectionTimer" to="." method="_on_set_direction_timer_timeout"]
